# video-player

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: README.md
scripts/: compare_performance.py  convert_for_rpi.sh  convert_video.sh  install_deps.sh  install_deps_mac.sh  install_deps_raspberry.sh  install_deps_rpi.sh
src/: VideoPlayer.cpp  VideoPlayer.h  main.cpp
src/config/: websocket.ts
src/core/: AudioManager.cpp  AudioManager.h  Renderer.cpp  Renderer.h  VideoDecoder.cpp  VideoDecoder.h  WebSocketController.cpp  WebSocketController.h
src/utils/: Logger.cpp  Logger.h
